@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2014 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,12 @@
 
 package org.springframework.test.context.support;
 
+import java.util.Arrays;
+
 import org.springframework.beans.factory.support.BeanDefinitionReader;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.context.support.GenericApplicationContext;
 import org.springframework.test.context.MergedContextConfiguration;
-import org.springframework.util.ObjectUtils;
 
 /**
  * Concrete implementation of {@link AbstractGenericContextLoader} that reads
@@ -64,10 +65,10 @@ public class GenericXmlContextLoader extends AbstractGenericContextLoader {
 	@Override
 	protected void validateMergedContextConfiguration(MergedContextConfiguration mergedConfig) {
 		if (mergedConfig.hasClasses()) {
-			String msg = String.format(
-				"Test class [%s] has been configured with @ContextConfiguration's 'classes' attribute %s, "
-						+ "but %s does not support annotated classes.", mergedConfig.getTestClass().getName(),
-				ObjectUtils.nullSafeToString(mergedConfig.getClasses()), getClass().getSimpleName());
+			String msg = """
+					Test class [%s] has been configured with @ContextConfiguration's 'classes' attribute %s, \
+					but %s does not support annotated classes.""".formatted(mergedConfig.getTestClass().getName(),
+						Arrays.toString(mergedConfig.getClasses()), getClass().getSimpleName());
 			logger.error(msg);
 			throw new IllegalStateException(msg);
 		}
