@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,12 +20,10 @@ import java.util.AbstractSet;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.tomcat.util.buf.MessageBytes;
 import org.apache.tomcat.util.http.MimeHeaders;
@@ -39,6 +37,7 @@ import org.springframework.util.MultiValueMap;
  * {@code MultiValueMap} implementation for wrapping Tomcat HTTP headers.
  *
  * @author Brian Clozel
+ * @author Sam Brannen
  * @since 5.1.1
  */
 class TomcatHeadersAdapter implements MultiValueMap<String, String> {
@@ -106,19 +105,19 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public boolean containsKey(Object key) {
-		if (key instanceof String) {
-			return (this.headers.findHeader((String) key, 0) != -1);
+		if (key instanceof String headerName) {
+			return (this.headers.findHeader(headerName, 0) != -1);
 		}
 		return false;
 	}
 
 	@Override
 	public boolean containsValue(Object value) {
-		if (value instanceof String) {
-			MessageBytes needle = MessageBytes.newInstance();
-			needle.setString((String) value);
+		if (value instanceof String text) {
+			MessageBytes messageBytes = MessageBytes.newInstance();
+			messageBytes.setString(text);
 			for (int i = 0; i < this.headers.size(); i++) {
-				if (this.headers.getValue(i).equals(needle)) {
+				if (this.headers.getValue(i).equals(messageBytes)) {
 					return true;
 				}
 			}
@@ -147,9 +146,9 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 	@Override
 	@Nullable
 	public List<String> remove(Object key) {
-		if (key instanceof String) {
+		if (key instanceof String headerName) {
 			List<String> previousValues = get(key);
-			this.headers.removeHeader((String) key);
+			this.headers.removeHeader(headerName);
 			return previousValues;
 		}
 		return null;
@@ -167,22 +166,17 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public Set<String> keySet() {
-		Set<String> result = new HashSet<>(8);
-		Enumeration<String> names = this.headers.names();
-		while (names.hasMoreElements()) {
-			result.add(names.nextElement());
-		}
-		return result;
+		return new HeaderNames();
 	}
 
 	@Override
 	public Collection<List<String>> values() {
-		return keySet().stream().map(this::get).collect(Collectors.toList());
+		return keySet().stream().map(this::get).toList();
 	}
 
 	@Override
 	public Set<Entry<String, List<String>>> entrySet() {
-		return new AbstractSet<Entry<String, List<String>>>() {
+		return new AbstractSet<>() {
 			@Override
 			public Iterator<Entry<String, List<String>>> iterator() {
 				return new EntryIterator();
@@ -204,7 +198,7 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 
 	private class EntryIterator implements Iterator<Entry<String, List<String>>> {
 
-		private Enumeration<String> names = headers.names();
+		private final Enumeration<String> names = headers.names();
 
 		@Override
 		public boolean hasNext() {
@@ -244,6 +238,61 @@ class TomcatHeadersAdapter implements MultiValueMap<String, String> {
 			headers.removeHeader(this.key);
 			addAll(this.key, value);
 			return previous;
+		}
+	}
+
+
+	private class HeaderNames extends AbstractSet<String> {
+
+		@Override
+		public Iterator<String> iterator() {
+			return new HeaderNamesIterator(headers.names());
+		}
+
+		@Override
+		public int size() {
+			Enumeration<String> names = headers.names();
+			int size = 0;
+			while (names.hasMoreElements()) {
+				names.nextElement();
+				size++;
+			}
+			return size;
+		}
+	}
+
+	private final class HeaderNamesIterator implements Iterator<String> {
+
+		private final Enumeration<String> enumeration;
+
+		@Nullable
+		private String currentName;
+
+		private HeaderNamesIterator(Enumeration<String> enumeration) {
+			this.enumeration = enumeration;
+		}
+
+		@Override
+		public boolean hasNext() {
+			return this.enumeration.hasMoreElements();
+		}
+
+		@Override
+		public String next() {
+			this.currentName = this.enumeration.nextElement();
+			return this.currentName;
+		}
+
+		@Override
+		public void remove() {
+			if (this.currentName == null) {
+				throw new IllegalStateException("No current Header in iterator");
+			}
+			int index = headers.findHeader(this.currentName, 0);
+			if (index == -1) {
+				throw new IllegalStateException("Header not present: " + this.currentName);
+			}
+			headers.removeHeader(index);
 		}
 	}
 
