@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.web.bind.support;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import reactor.core.publisher.Mono;
 
@@ -34,7 +33,16 @@ import org.springframework.web.server.ServerWebExchange;
 
 /**
  * Specialized {@link org.springframework.validation.DataBinder} to perform data
- * binding from URL query params or form data in the request data to Java objects.
+ * binding from URL query parameters or form data in the request data to Java objects.
+ *
+ * <p><strong>WARNING</strong>: Data binding can lead to security issues by exposing
+ * parts of the object graph that are not meant to be accessed or modified by
+ * external clients. Therefore the design and use of data binding should be considered
+ * carefully with regard to security. For more details, please refer to the dedicated
+ * sections on data binding for
+ * <a href="https://docs.spring.io/spring-framework/docs/current/reference/html/web.html#mvc-ann-initbinder-model-design">Spring Web MVC</a> and
+ * <a href="https://docs.spring.io/spring-framework/docs/current/reference/html/web-reactive.html#webflux-ann-initbinder-model-design">Spring WebFlux</a>
+ * in the reference manual.
  *
  * @author Rossen Stoyanchev
  * @author Juergen Hoeller
@@ -64,7 +72,7 @@ public class WebExchangeDataBinder extends WebDataBinder {
 
 
 	/**
-	 * Bind query params, form data, and or multipart form data to the binder target.
+	 * Bind query parameters, form data, or multipart form data to the binder target.
 	 * @param exchange the current exchange
 	 * @return a {@code Mono<Void>} when binding is complete
 	 */
@@ -75,8 +83,8 @@ public class WebExchangeDataBinder extends WebDataBinder {
 	}
 
 	/**
-	 * Protected method to obtain the values for data binding. By default this
-	 * method delegates to {@link #extractValuesToBind(ServerWebExchange)}.
+	 * Obtain the values for data binding. By default, this delegates to
+	 * {@link #extractValuesToBind(ServerWebExchange)}.
 	 * @param exchange the current exchange
 	 * @return a map of bind values
 	 * @since 5.3
@@ -115,7 +123,7 @@ public class WebExchangeDataBinder extends WebDataBinder {
 		if (!CollectionUtils.isEmpty(values)) {
 			values = values.stream()
 					.map(value -> value instanceof FormFieldPart ? ((FormFieldPart) value).value() : value)
-					.collect(Collectors.toList());
+					.toList();
 			params.put(key, values.size() == 1 ? values.get(0) : values);
 		}
 	}
