@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -33,10 +33,10 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Sebastien Deleuze
  * @author Sam Brannen
  */
-public class CorsConfigurationTests {
+class CorsConfigurationTests {
 
 	@Test
-	public void setNullValues() {
+	void setNullValues() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.setAllowedOrigins(null);
 		assertThat(config.getAllowedOrigins()).isNull();
@@ -55,14 +55,13 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void setValues() {
+	void setValues() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.addAllowedOriginPattern("http://*.example.com");
 		config.addAllowedHeader("*");
 		config.addAllowedMethod("*");
-		config.addExposedHeader("header1");
-		config.addExposedHeader("header2");
+		config.addExposedHeader("*");
 		config.setAllowCredentials(true);
 		config.setMaxAge(123L);
 
@@ -70,25 +69,13 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.example.com");
 		assertThat(config.getAllowedHeaders()).containsExactly("*");
 		assertThat(config.getAllowedMethods()).containsExactly("*");
-		assertThat(config.getExposedHeaders()).containsExactly("header1", "header2");
+		assertThat(config.getExposedHeaders()).containsExactly("*");
 		assertThat(config.getAllowCredentials()).isTrue();
-		assertThat(config.getMaxAge()).isEqualTo(new Long(123));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
 	}
 
 	@Test
-	public void asteriskWildCardOnAddExposedHeader() {
-		assertThatIllegalArgumentException()
-				.isThrownBy(() -> new CorsConfiguration().addExposedHeader("*"));
-	}
-
-	@Test
-	public void asteriskWildCardOnSetExposedHeaders() {
-		assertThatIllegalArgumentException()
-				.isThrownBy(() -> new CorsConfiguration().setExposedHeaders(Collections.singletonList("*")));
-	}
-
-	@Test
-	public void combineWithNull() {
+	void combineWithNull() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.setAllowedOrigins(Collections.singletonList("*"));
 		config.combine(null);
@@ -97,7 +84,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combineWithNullProperties() {
+	void combineWithNullProperties() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.setAllowedOriginPatterns(Collections.singletonList("http://*.example.com"));
@@ -116,12 +103,12 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedHeaders()).containsExactly("header1");
 		assertThat(config.getExposedHeaders()).containsExactly("header3");
 		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name());
-		assertThat(config.getMaxAge()).isEqualTo(new Long(123));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
 		assertThat(config.getAllowCredentials()).isTrue();
 	}
 
 	@Test  // SPR-15772
-	public void combineWithDefaultPermitValues() {
+	void combineWithDefaultPermitValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		CorsConfiguration other = new CorsConfiguration();
 		other.addAllowedOrigin("https://domain.com");
@@ -133,12 +120,14 @@ public class CorsConfigurationTests {
 		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
 		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("header1");
 		assertThat(combinedConfig.getAllowedMethods()).containsExactly(HttpMethod.PUT.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
 
 		combinedConfig = other.combine(config);
 		assertThat(combinedConfig).isNotNull();
 		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("https://domain.com");
 		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("header1");
 		assertThat(combinedConfig.getAllowedMethods()).containsExactly(HttpMethod.PUT.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
 
 		combinedConfig = config.combine(new CorsConfiguration());
 		assertThat(config.getAllowedOrigins()).containsExactly("*");
@@ -146,6 +135,7 @@ public class CorsConfigurationTests {
 		assertThat(combinedConfig).isNotNull();
 		assertThat(combinedConfig.getAllowedMethods())
 				.containsExactly(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
 
 		combinedConfig = new CorsConfiguration().combine(config);
 		assertThat(config.getAllowedOrigins()).containsExactly("*");
@@ -153,10 +143,11 @@ public class CorsConfigurationTests {
 		assertThat(combinedConfig).isNotNull();
 		assertThat(combinedConfig.getAllowedMethods())
 				.containsExactly(HttpMethod.GET.name(), HttpMethod.HEAD.name(), HttpMethod.POST.name());
+		assertThat(combinedConfig.getExposedHeaders()).isEmpty();
 	}
 
 	@Test
-	public void combinePatternWithDefaultPermitValues() {
+	void combinePatternWithDefaultPermitValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		CorsConfiguration other = new CorsConfiguration();
 		other.addAllowedOriginPattern("http://*.com");
@@ -173,7 +164,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combinePatternWithDefaultPermitValuesAndCustomOrigin() {
+	void combinePatternWithDefaultPermitValuesAndCustomOrigin() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		config.setAllowedOrigins(Collections.singletonList("https://domain.com"));
 
@@ -192,10 +183,11 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combineWithAsteriskWildCard() {
+	void combineWithAsteriskWildCard() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.addAllowedHeader("*");
+		config.addExposedHeader("*");
 		config.addAllowedMethod("*");
 		config.addAllowedOriginPattern("*");
 
@@ -204,6 +196,8 @@ public class CorsConfigurationTests {
 		other.addAllowedOriginPattern("http://*.company.com");
 		other.addAllowedHeader("header1");
 		other.addExposedHeader("header2");
+		other.addAllowedHeader("anotherHeader1");
+		other.addExposedHeader("anotherHeader2");
 		other.addAllowedMethod(HttpMethod.PUT.name());
 
 		CorsConfiguration combinedConfig = config.combine(other);
@@ -211,6 +205,7 @@ public class CorsConfigurationTests {
 		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getExposedHeaders()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedMethods()).containsExactly("*");
 
 		combinedConfig = other.combine(config);
@@ -218,11 +213,13 @@ public class CorsConfigurationTests {
 		assertThat(combinedConfig.getAllowedOrigins()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedOriginPatterns()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
+		assertThat(combinedConfig.getExposedHeaders()).containsExactly("*");
 		assertThat(combinedConfig.getAllowedMethods()).containsExactly("*");
+		assertThat(combinedConfig.getAllowedHeaders()).containsExactly("*");
 	}
 
 	@Test  // SPR-14792
-	public void combineWithDuplicatedElements() {
+	void combineWithDuplicatedElements() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("https://domain1.com");
 		config.addAllowedOrigin("https://domain2.com");
@@ -252,7 +249,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combine() {
+	void combine() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("https://domain1.com");
 		config.addAllowedOriginPattern("http://*.domain1.com");
@@ -277,30 +274,44 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedHeaders()).containsExactly("header1", "header2");
 		assertThat(config.getExposedHeaders()).containsExactly("header3", "header4");
 		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name(), HttpMethod.PUT.name());
-		assertThat(config.getMaxAge()).isEqualTo(new Long(456));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(456));
 		assertThat(config).isNotNull();
 		assertThat(config.getAllowCredentials()).isFalse();
 		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.domain1.com", "http://*.domain2.com");
 	}
 
 	@Test
-	public void checkOriginAllowed() {
+	void checkOriginAllowed() {
+		// "*" matches
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("*");
 
+		// "*" does not match together with allowCredentials
 		config.setAllowCredentials(true);
 		assertThatIllegalArgumentException().isThrownBy(() -> config.checkOrigin("https://domain.com"));
 
+		// comma-delimited origins list
+		config.setAllowedOrigins(Collections.singletonList("https://a1.com,https://a2.com"));
+		assertThat(config.checkOrigin("https://a1.com")).isEqualTo("https://a1.com");
+		assertThat(config.checkOrigin("https://a2.com/")).isEqualTo("https://a2.com/");
+
+		// specific origin matches Origin header with or without trailing "/"
 		config.setAllowedOrigins(Collections.singletonList("https://domain.com"));
 		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
+		assertThat(config.checkOrigin("https://domain.com/")).isEqualTo("https://domain.com/");
+
+		// specific origin with trailing "/" matches Origin header with or without trailing "/"
+		config.setAllowedOrigins(Collections.singletonList("https://domain.com/"));
+		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
+		assertThat(config.checkOrigin("https://domain.com/")).isEqualTo("https://domain.com/");
 
 		config.setAllowCredentials(false);
 		assertThat(config.checkOrigin("https://domain.com")).isEqualTo("https://domain.com");
 	}
 
 	@Test
-	public void checkOriginNotAllowed() {
+	void checkOriginNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin(null)).isNull();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
@@ -316,7 +327,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkOriginPatternAllowed() {
+	void checkOriginPatternAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
 
@@ -329,12 +340,27 @@ public class CorsConfigurationTests {
 		config.addAllowedOriginPattern("https://*.domain.com");
 		assertThat(config.checkOrigin("https://example.domain.com")).isEqualTo("https://example.domain.com");
 
+		config.addAllowedOriginPattern("https://*.port.domain.com:[*]");
+		assertThat(config.checkOrigin("https://example.port.domain.com")).isEqualTo("https://example.port.domain.com");
+		assertThat(config.checkOrigin("https://example.port.domain.com:1234")).isEqualTo("https://example.port.domain.com:1234");
+
+		config.addAllowedOriginPattern("https://*.specific.port.com:[8080,8081]");
+		assertThat(config.checkOrigin("https://example.specific.port.com:8080")).isEqualTo("https://example.specific.port.com:8080");
+		assertThat(config.checkOrigin("https://example.specific.port.com:8081")).isEqualTo("https://example.specific.port.com:8081");
+		assertThat(config.checkOrigin("https://example.specific.port.com:1234")).isNull();
+
+		config.addAllowedOriginPattern("https://*.a1.com:[8080,8081],https://*.a2.com");
+		assertThat(config.checkOrigin("https://example.a1.com:8080")).isEqualTo("https://example.a1.com:8080");
+		assertThat(config.checkOrigin("https://example.a1.com:8081")).isEqualTo("https://example.a1.com:8081");
+		assertThat(config.checkOrigin("https://example.a1.com:8082")).isNull();
+		assertThat(config.checkOrigin("https://example.a2.com")).isEqualTo("https://example.a2.com");
+
 		config.setAllowCredentials(false);
 		assertThat(config.checkOrigin("https://example.domain.com")).isEqualTo("https://example.domain.com");
 	}
 
 	@Test
-	public void checkOriginPatternNotAllowed() {
+	void checkOriginPatternNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin(null)).isNull();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
@@ -346,10 +372,13 @@ public class CorsConfigurationTests {
 
 		config.setAllowedOriginPatterns(new ArrayList<>());
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
+
+		config.setAllowedOriginPatterns(Collections.singletonList("https://*.specific.port.com:[8080,8081]"));
+		assertThat(config.checkOrigin("https://example.specific.port.com:1234")).isNull();
 	}
 
 	@Test
-	public void checkMethodAllowed() {
+	void checkMethodAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHttpMethod(HttpMethod.GET)).containsExactly(HttpMethod.GET, HttpMethod.HEAD);
 
@@ -362,7 +391,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkMethodNotAllowed() {
+	void checkMethodNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHttpMethod(null)).isNull();
 		assertThat(config.checkHttpMethod(HttpMethod.DELETE)).isNull();
@@ -372,7 +401,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkHeadersAllowed() {
+	void checkHeadersAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHeaders(Collections.emptyList())).isEqualTo(Collections.emptyList());
 
@@ -385,7 +414,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkHeadersNotAllowed() {
+	void checkHeadersNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHeaders(null)).isNull();
 		assertThat(config.checkHeaders(Collections.singletonList("header1"))).isNull();
@@ -399,7 +428,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test  // SPR-15772
-	public void changePermitDefaultValues() {
+	void changePermitDefaultValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		config.addAllowedOrigin("https://domain.com");
 		config.addAllowedHeader("header1");
@@ -411,7 +440,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void permitDefaultDoesntSetOriginWhenPatternPresent() {
+	void permitDefaultDoesntSetOriginWhenPatternPresent() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOriginPattern("http://*.com");
 		config = config.applyPermitDefaultValues();
