@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.web.reactive.function;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Mono;
@@ -385,8 +384,8 @@ public abstract class BodyInserters {
 			BodyInserter.Context context, @Nullable MediaType mediaType) {
 
 		List<MediaType> supportedMediaTypes = context.messageWriters().stream()
-				.flatMap(reader -> reader.getWritableMediaTypes().stream())
-				.collect(Collectors.toList());
+				.flatMap(reader -> reader.getWritableMediaTypes(bodyType).stream())
+				.toList();
 
 		return new UnsupportedMediaTypeException(mediaType, supportedMediaTypes, bodyType);
 	}
